--- a/tv/tv.csproj
+++ b/tv/tv.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Game.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Televisor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
