--- a/ProgramacionGrafica/ProgramacionGrafica.csproj
+++ b/ProgramacionGrafica/ProgramacionGrafica.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Color.cs" />
     <Compile Include="Escenario.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Parte.cs" />
@@ -63,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="jsons\escritorio.json" />
     <None Include="jsons\parlantes.json" />
     <None Include="jsons\televisor.json" />
     <None Include="OpenTK.dll.config" />
