--- a/ProgramacionGrafica/ProgramacionGrafica.csproj
+++ b/ProgramacionGrafica/ProgramacionGrafica.csproj
@@ -50,6 +50,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Api.cs" />
+    <Compile Include="ApiResponse.cs" />
     <Compile Include="Color.cs" />
     <Compile Include="Escenario.cs" />
     <Compile Include="Game.cs" />
@@ -66,6 +68,7 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="jsons\escritorio.json" />
+    <None Include="jsons\lapiz.json" />
     <None Include="jsons\parlantes.json" />
     <None Include="jsons\televisor.json" />
     <None Include="OpenTK.dll.config" />
